<resources>
    <string name="app_name">FTUI Mobile</string>
    <string name="app_name_uppercase">FTUI MOBILE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About the app</string>

    <!--menu-->
    <string name="home">Home</string>
    <string name="e_complaint">M-Complaint</string>
    <string name="academic_guide_book">Academic Guide Book</string>
    <string name="university_map">Campus Map</string>
    <string name="academic_regulation">Academic Regulation</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="elevate_complaint_status">Promote complaint status</string>

    <!--Home Greeting Card-->
    <string name="user">User</string>
    <string name="tap_to_login">Tap to login</string>

    <!--Login screen-->
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_identifier">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_register">Password (8 Char. min.)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="komplaint">Complaint</string>
    <string name="submit_complaint">Add complaint</string>
    <string name="filter">Filter</string>

    <!--Complaint Status-->
    <string name="AWAITING_FOLLOWUP">Awaiting Follow-up</string>
    <string name="IS_BEING_FOLLOWED_UP">On process</string>
    <string name="FINISHED">Finished</string>
    <string name="REOPENED">Reopened</string>

    <!--Keluhan OptionMenu Message-->
    <string name="AWAITING_FOLLOWUP_OM">Process complaint</string>
    <string name="IS_BEING_FOLLOWED_UP_OM">Finish complaint</string>
    <string name="FINISHED_OM">Reopen Complaint</string>


    <!--Complaint Type-->
    <string name="FACILITIES_AND_INFRASTRUCTURE">Facilities &amp; Infrastructure</string>
    <string name="BUILDINGS">Buildings</string>
    <string name="HUMAN_RESOURCE">Teachers and Employees</string>
    <string name="CLEANING_AND_GARDENING">Cleaning</string>
    <string name="INCIDENT_AND_RULE_VIOLATION">Campus Rule Violation</string>
    <string name="OTHERS">Others</string>


    <string name="COMBINED_STATUS_AND_TYPE">%1$s | %2$s</string>
    <string name="delete_complaint">Delete Complaint</string>
    <string name="edit_complaint">Edit Complaint</string>

    <!--FINE LOCATION PERMISSION DIALOG-->
    <string name="fine_location_permission_title">Allow location access</string>
    <string name="fine_location_permission_description">This application needs location access to find your position inside FTUI Campus. No location will be recorded by this application</string>

    <!--CAMERA LOCATION PERMISSION DIALOG-->
    <string name="camera_permission_title">Allow camera access</string>
    <string name="camera_permission_description">This application requires camera access for taking pictures about your complaint and will be saved to help surveyors to find the objects you are reporting.</string>

    <!--TOAST TEXT-->
    <string name="cant_access_location">Can\'t access location service (Unauthorized)</string>

    <!--SIGN UP DIALOG BOX-->
    <string name="dialog_title_not_strong_password">Password is not strong enough</string>
    <string name="dialog_message_not_strong_password">For the safety of your account, please use 8 or more characters.</string>
    <string name="dialog_title_not_matching_password">Password confirmation is wrong</string>
    <string name="dialog_message_not_matching_password">Please type your password again at the "Password confirmation" column</string>

    <!--IMAGE DIALOG-->
    <string name="dialog_title_image_chosen">Chosen pictures</string>
    <string name="dialog_negative_button_remove_image">Delete</string>
    <string name="dialog_neutral_button_change_image">Change</string>

    <!-- DATE UTIL -->
    <string name="days">Day(s)</string>
    <string name="hours">Hour(s)</string>
    <string name="minutes">Minute(s)</string>
    <string name="seconds">Second(s)</string>

    <string name="image_has_been_added_click_again_to_preview">Pictures has been added, tap again to show.</string>

    <string name="undo">UNDO</string>
    <string name="clear">Clear</string>
    <string name="complaint_description">Description</string>
    <string name="comments">Comments</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="complaint_daycount_since_submitted">%1$d %2$s Since complaint %3$s</string>
    <string name="submitted">submitted</string>
    <string name="reopen">reopened</string>
    <string name="object_take_picture_info">Take picture(s) of object(s) you are reporting.</string>
    <string name="next">Next</string>
    <string name="maximum_picture_reached_notification">Maximum amount of pictures reached, delete a picture and add it again to change.</string>
    <string name="complaint_title">Title</string>
    <string name="report_complaint">Report a complaint</string>
    <string name="complaint_type">Complaint type</string>
    <string name="fill_complaint_detail">Fill in the complaint detail</string>
    <string name="object_location">Object Location</string>
    <string name="info_user_eligibility">To verify your eligibility of using this application, we need to make sure you are a part of Faculty of Engineering, University of Indonesia. You can verify your identity by using your SSO-UI account.</string>
    <string name="register_here">Register</string>
    <string name="see_detail_complaint">See detailed complaint report</string>
    <string name="register">Register</string>
    <string name="hello_text">Hello, %1$s. You have been successfully verified your identity via SSO-UI Account, one more step and you can use this app\'s feature completely!</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="personal_information">Personal information</string>
    <string name="identity_number">Identity Number</string>
    <string name="department">Majors/Department</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="filter_based_on_complaint_type">Filter by complaint type</string>
    <string name="filter_based_on_complaint_status">Filter by complaint status</string>
    <string name="type_comment">Type a comment…</string>
    <string name="no_location">No Location</string>
    <string name="add_image">Add pictures about your report (Max. of 4 images)</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="no_privilege_to_access_complaint">You don\'t have access to the complaint list</string>
    <string name="all_field_is_required">Please fill all the details</string>
    <string name="image_is_required">Please insert atleast 1 image</string>
    <string name="min_6_chars">Title and reports description must contain more than 6 characters.</string>
    <string name="comment_successfully_added">Comment has been successfully added</string>
    <string name="notification">Notification</string>
    <string name="complaint_deleted_successfully">Complaint deleted successfully</string>
    <string name="delete_complaint_confirmation">Are you sure to delete this entry ?</string>
    <string name="max_image_limit_reached">Maximum amount of images reached</string>
    <string name="show_all_complaint">Shows all reports</string>
    <string name="all_complaint">All reports</string>
    <string name="loading">Loading…</string>
    <string name="general_cant_get_complaint_error_msg">Can\'t get reports from server, please try again.</string>
    <string name="email_password_cant_be_empty">Email and password can\'t be empty</string>
    <string name="successfully_registered">You have been successfully registered</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="complaint_desc_text">Complaint Description</string>
    <string name="give_account_password">Give your account a password</string>
    <string name="login_with_sso_ui">Login with SSO-UI</string>
    <string name="got_new_notification">You have new notification!</string>
</resources>
