<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_sharp_home_24px"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_complaint"
                android:icon="@drawable/ic_submit_complain_24px"
                android:title="@string/e_complaint"/>
        <item
                android:id="@+id/nav_guidebook"
                android:icon="@drawable/ic_sharp_book_24px"
                android:title="@string/academic_guide_book"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_sharp_map_24px"
                android:title="@string/university_map"/>
        <item
                android:id="@+id/nav_academic_regulation"
                android:icon="@drawable/ic_sharp_school_24px"
                android:title="@string/academic_regulation"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_sharp_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_sharp_logout"
                android:title="@string/logout"/>
    </group>

</menu>
