<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="@dimen/medium_padding"
        android:theme="@style/keluhan_form"
        tools:context=".SubmitComplaintForm">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/complaint_title_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/complaint_title_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/ic_title_white_24dp"
                android:drawablePadding="@dimen/small_padding"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/complaint_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complaint_type"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:orientation="horizontal">
        <Button
                android:id="@+id/button_category_facilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_facilities_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/FACILITIES_AND_INFRASTRUCTURE"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>

        <Button
                android:id="@+id/button_category_buildings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_buildings_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/BUILDINGS"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>

        <Button
                android:id="@+id/button_category_human_resource"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_human_res_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/HUMAN_RESOURCE"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:orientation="horizontal">
        <Button
                android:id="@+id/button_category_cleaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_cleaning_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/CLEANING_AND_GARDENING"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>

        <Button
                android:id="@+id/button_category_incident"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_incident_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/INCIDENT_AND_RULE_VIOLATION"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>

        <Button
                android:id="@+id/button_category_others"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="@dimen/medium_padding"
                android:drawableTop="@drawable/ic_category_others_50dp"
                android:drawablePadding="@dimen/small_margin"
                android:text="@string/OTHERS"
                android:textAllCaps="false"
                android:background="@drawable/ic_category_state_drawable"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/object_location_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterTextAppearance="@style/TextAppearance.App.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/object_location_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/ic_location_on_white_24dp"
                android:drawablePadding="@dimen/small_padding"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/object_location"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/complaint_description_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="100">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/complaint_description_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:maxLines="3"
                android:hint="@string/complaint_description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/button_background"
            android:text="@string/submit_complaint" />


</LinearLayout>